@@ -525,7 +525,7 @@ desactivado tbblue_change_timing hasta que se corrija:
 -Bubblegumbros el marcador de arriba del todo en el menu sale cortado: cargando desde cero se ve bien. algun registro de otro juego tendra que ver
 
 -bugs Atic atac:
-*flashlight effect on blue dark room: I have to check the "smooth scroll" bit you told me some days ago. maybe that's the cause for that bug
+ok *flashlight effect on blue dark room: I have to check the "smooth scroll" bit you told me some days ago. maybe that's the cause for that bug
 *swag room: all objects are visible
 *seems also some sprites (objects like food) are not clipped well when the scroll makes the object at the border of the display. I think I'm clipping all the sprite
 
@@ -541,3 +541,5 @@ desactivado tbblue_change_timing hasta que se corrija:
 *revisar si se puede decir si la operacion esta ejecutandose o no
 
 -puerto 0x5f de DAC D entra en conflicto con volumen canal A de chip AY?
+
+-bit scroll medio pixel de ula. registro 0x68.  bit 2 = ULA half pixel scroll (may change) (soft reset = 0)
